log
Thu May 11 07:11:43 PM -04 2023: 
 tests:  1|3
total_score: 10/70
da9f140
Thu May 11 07:12:53 PM -04 2023: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
19dd403
Thu May 11 07:14:20 PM -04 2023: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
41db2c7
Thu May 11 07:15:01 PM -04 2023: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
d2c9806
Thu May 11 07:35:38 PM -04 2023: 
 heap.c | 38 +++++++++++++++++++++++++++++++++-----
 1 file changed, 33 insertions(+), 5 deletions(-)
In file included from test.c:4:
heap.c: In function ‘reordenamiento_ascendente’:
heap.c:59:17: error: expected identifier or ‘(’ before ‘=’ token
   59 |       heapElem  = arreglo[i];
      |                 ^
Compilation failed
2065b58
Thu May 11 07:36:10 PM -04 2023: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
4d96ca4
Thu May 11 07:37:11 PM -04 2023: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
abfd5f6
Thu May 11 07:41:59 PM -04 2023: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
707b479
Thu May 11 07:46:51 PM -04 2023: 
 heap.c | 54 +++++++++++++++++++++++++++++++-----------------------
 1 file changed, 31 insertions(+), 23 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:99:4: error: implicit declaration of function ‘reordenamiento_ascendente’; did you mean ‘reordenamiento_descendente’? [-Werror=implicit-function-declaration]
   99 |    reordenamiento_ascendente  (pq->heapArray, pq->size);
      |    ^~~~~~~~~~~~~~~~~~~~~~~~~
      |    reordenamiento_descendente
heap.c: In function ‘heap_pop’:
heap.c:116:13: error: unused variable ‘raiz’ [-Werror=unused-variable]
  116 |    heapElem raiz = pq->heapArray[0];
      |             ^~~~
cc1: all warnings being treated as errors
Compilation failed
12bbeb6
Thu May 11 07:50:46 PM -04 2023: 
 heap.c | 77 ++++++++++++++++++++++++++++++++++++++++++------------------------
 1 file changed, 49 insertions(+), 28 deletions(-)
 tests:  8|0
total_score: 70/70
fbe2db1
Thu May 11 08:11:16 PM -04 2023: 
 heap.c | 56 +++++++++++++-------------------------------------------
 1 file changed, 13 insertions(+), 43 deletions(-)
 tests:  8|0
total_score: 70/70
db0c672
Thu May 11 08:16:16 PM -04 2023: 
 heap.c | 91 +++++++++++++++++++++++++++++++++++-------------------------------
 1 file changed, 49 insertions(+), 42 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:115:8: error: unused variable ‘maxChild’ [-Werror=unused-variable]
  115 |    int maxChild;
      |        ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
25d4695
Thu May 11 08:16:31 PM -04 2023: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  8|0
total_score: 70/70
0e6a04f
Thu May 11 08:31:14 PM -04 2023: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  8|0
total_score: 70/70
6707b7c
Thu May 11 09:30:43 PM -04 2023: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  8|0
total_score: 70/70
ee2c08c
Thu May 11 09:31:52 PM -04 2023: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:134:16: error: expected ‘;’ before ‘}’ token
  134 |    return nuevo
      |                ^
      |                ;
  135 | }
      | ~               
Compilation failed
1bcbb0b
Thu May 11 09:34:23 PM -04 2023: 
 heap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  8|0
total_score: 70/70
2e97428
